# ledger-kv

./: Cargo.toml  README.md  todo.md
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
.trunk/plugins/: trunk
src/: data_rw_native.rs  data_rw_trait.rs  data_store_native.rs  kv_entry.rs  ledger_entry.rs  lib.rs  main.rs  partition_table.rs  platform_specific_wasm32.rs  platform_specific_x86_64.rs
tests/: ledger_kv.rs
