[package]
name = "ledger-kv"
version = "0.1.1"
edition = "2021"
description = "A Rust-based key-value store designed for append-only data storage. Features SHA-256 checksums for data integrity and cross-compiles to wasm32 for smart contract applications."
license = "MIT OR Apache-2.0"
documentation = "https://github.com/sshtmc/ledger-kv"
readme = "README.md"
homepage = "https://github.com/sshtmc/ledger-kv"
repository = "https://github.com/sshtmc/ledger-kv"

[lib]
name = "ledger_kv"
path = "src/lib.rs"

[dependencies]
ahash = "0.8.6"
anyhow = "1.0.75"
borsh = { version = "1.3.0", features = ["derive"] }
# borsh-derive = "1.1.1"
clap = "4.4.7"
fs-err = "2.9.0"
indexmap = "2.1.0"
log = "0.4.20"
sha2 = "0.10.8"
getrandom = { version = "0.2.10", features = ["js"] }
hex = "0.4.3"

[target.'cfg(target_arch = "x86_64")'.dependencies]
memmap2 = "0.9.0"

[dev-dependencies]
tempfile = "3.8.0"
