[package]
name = "ledger-kv"
version = "0.2.0"
edition = "2021"
description = "A Rust-based key-value store designed for append-only data storage. Features SHA-256 checksums for data integrity and cross-compiles to wasm32 for smart contract applications."
license = "MIT OR Apache-2.0"
documentation = "https://github.com/decent-cloud/ledger-kv"
readme = "README.md"
homepage = "https://github.com/decent-cloud/ledger-kv"
repository = "https://github.com/decent-cloud/ledger-kv"

[lib]
name = "ledger_kv"
path = "src/lib.rs"

[dependencies]
ahash = { version = "0.8.7", default-features = false, features = ["compile-time-rng"] }
anyhow = "1.0.75"
borsh = { version = "1.3.0", features = ["derive"] }
hex = "0.4.3"
indexmap = "2.2.2"
lazy_static = "1.4.0"
serde = { version = "1.0.195", features = ["derive"] }
sha2 = "0.10.8"

[target.'cfg(target_arch = "x86_64")'.dependencies]
clap = "4.4.7"
fs-err = "2.9.0"
log = "0.4.20"
dirs = "5.0.1"
env_logger = "0.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ic-cdk = "0.12.1"
ic-cdk-timers = "0.6.0"
ic-canister-log = "0.2.0"

[dev-dependencies]
tempfile = "3.8.0"
