[package]
name = "ledger-kv"
version = "0.2.0"
edition = "2021"
description = "A Rust-based key-value store designed for append-only data storage. Features SHA-256 checksums for data integrity and cross-compiles to wasm32 for smart contract applications."
license = "MIT OR Apache-2.0"
documentation = "https://github.com/decent-cloud/ledger-kv"
readme = "README.md"
homepage = "https://github.com/decent-cloud/ledger-kv"
repository = "https://github.com/decent-cloud/ledger-kv"

[lib]
name = "ledger_kv"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.82"
base64 = { version = "0.22.0", default-features = false, features = ["alloc"] }
borsh = { version = "1.4.0", features = ["derive"] }
hex = "0.4.3"
indexmap = "2.2.6"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"

[target.'cfg(target_arch = "x86_64")'.dependencies]
clap = "4.5.4"
fs-err = "2.11.0"
log = "0.4.21"
dirs = "5.0.1"
env_logger = "0.11.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ic-cdk = "0.13.2"
ic-cdk-timers = "0.7.0"
ic-canister-log = "0.2.0"

[dev-dependencies]
tempfile = "3.10.1"
